--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;500;600;700&family=Poppins&family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/mjxgui.css">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
 
     <script>
@@ -72,7 +73,7 @@
 </div>
 
 <div class="page flexbox-column pad-30 column-half aifs center" id="projects">
-    <nav id="quick-nav" class="flexbox-row jcc aifs">
+    <nav class="flexbox-row jcc aifs">
         <a href="index.html" class="section-link flexbox-row ajc">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
@@ -149,18 +150,54 @@
     <div id="note-card-container" class="card-hidden-left"></div>
 </div>
 
+<footer class="flexbox-row mbt-20 ajc">
+    <span>&copy; <span id="copyright-year"></span>, Hrushikesh Vaidya</span>
+    <nav class="flexbox-row ajc" style="margin-left: 10px;">
+                <span class="contact-link flexbox-row aic space-lr">
+                    <a href="https://github.com/hrushikeshrv" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github space-lr" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
+                        </svg>
+                    </a>
+                </span>
+        <span class="contact-link flexbox-row aic space-lr">
+                    <a href="mailto:hrushikeshrv@gmail.com" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" />
+                          <path d="M3 7l9 6l9 -6" />
+                        </svg>
+                    </a>
+                </span>
+        <span class="contact-link flexbox-row aic space-lr">
+                    <a href="https://linkedin.com/in/hrushikeshrv" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                          <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                          <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
+                          <path d="M8 11l0 5" />
+                          <path d="M8 8l0 .01" />
+                          <path d="M12 16l0 -5" />
+                          <path d="M16 16v-3a2 2 0 0 0 -4 0" />
+                        </svg>
+                    </a>
+                </span>
+    </nav>
+</footer>
 
 <script>
     let gui;
     function initMJXGUIDemo() {
         const outputContainer = document.querySelector('#mjxgui-output-container');
         const outputTable = document.querySelector('#mjxgui-output');
-        gui = new MJXGUI('.mjxgui-demo-button', '$$', function() {
+        gui = new MJXGUI('.mjxgui-demo-button', function() {
             outputContainer.classList.remove('hidden');
             let tr = document.createElement('tr');
             tr.innerHTML = `<td>$$ ${gui.getLatex()} $$</td><td>${gui.getLatex()}</td>`;
             outputTable.appendChild(tr);
             MathJax.typesetPromise([tr]).then(() => {})
+        }, {
+            theme: 'dark'
         });
     }
 </script>
@@ -182,7 +219,7 @@
         });
 </script>
 <script>
-
+    document.querySelector('#copyright-year').innerHTML = new Date().getFullYear().toString();
 </script>
 </body>
 </html>
