Emphasized accent colors

--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
                         <h1 class="section-heading">About</h1>
                     </div>
                     <div id="about-stats" class="flexbox-row column-full aic jcse mt-20 mobile-hide">
-                        <span class="flexbox-row aic mt-10">
+                        <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">location_on</span>
-                            <span>Los Angeles, CA</span>
+                            <span data-tippy-content="University of Southern California, LA">Los Angeles, CA</span>
                         </span>
-                        <span class="flexbox-row aic mt-10">
+                        <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">schedule</span>
-                            <span id="my-time"></span>
+                            <span id="my-time" data-tippy-content="Pacific Time, GMT-7"></span>
                         </span>
-                        <span class="flexbox-row aic mt-10">
+                        <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">mail</span>
                             <a href="mailto:hrushikeshrv@gmail.com">hrushikeshrv@gmail.com</a>
                         </span>
