Improved theme highlights

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <a href="#study-section" class="section-link flexbox-row aic" id="bio-tooltip"><span>Study</span></a>
                             <a href="#work-section" class="section-link flexbox-row aic" id="work-tooltip"><span>Work</span></a>
                             <a href="#projects-section" class="section-link flexbox-row aic" id="projects-tooltip"><span>Projects</span></a>
-                            <a href="/data/resume-hrushikesh-vaidya.pdf" target="_blank" class="section-link flexbox-row ajc" id="resume-tooltip"><span>Resume</span></a>
+                            <a href="/data/resume-hrushikesh-vaidya.pdf" target="_blank" class="section-link flexbox-row ajc" id="resume-link"><span>Resume</span></a>
                             <button id="change-theme-button" class="flexbox-row aic" aria-label="Change Theme">
                                 <span class="dark-theme-button material-symbols-outlined">dark_mode</span>
                             </button>
@@ -143,11 +143,11 @@
                     <div id="about-stats" class="flexbox-row column-full aic jcse mt-20 mobile-hide">
                         <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">location_on</span>
-                            <span data-tippy-content="University of Southern California, LA">Los Angeles, CA</span>
+                            <span>Los Angeles, CA</span>
                         </span>
                         <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">schedule</span>
-                            <span id="my-time" data-tippy-content="Pacific Standard Time, GMT-7"></span>
+                            <span id="my-time"></span>
                         </span>
                         <span class="flexbox-row aic mt-10 stat-container">
                             <span class="material-symbols-outlined">mail</span>
@@ -171,7 +171,7 @@
                             own, and contributing to <a href="https://github.com/django/django" class="a" target="_blank">Django</a> from time to time.
                         </p>
                         <p>
-                            I'm also a tennis player and amateur powerlifter ️🏋🏻‍♂️.
+                            I'm also a tennis player and amateur powerlifter ️🏋🏻‍♂️
                         </p>
                     </div>
                 </section>
