--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
                     <div class="flexbox-column aifs jcfs" style="padding-left: 10px;">
                         <h1 id="nametag" class="pageload-slide-up">Hrushikesh Vaidya</h1>
-                        <span>MS Computer Engineering student at the University of Southern California.</span>
+                        <span>Computer Engineering student at the University of Southern California.</span>
                         <div class="flexbox-row ajc mt-10">
                             <span class="contact-link flexbox-row aic space-lr" style="margin-left: 0;">
                                 <a href="https://github.com/hrushikeshrv" target="_blank" class="flexbox-row aic">
@@ -136,7 +136,7 @@
                 </div>
             </div>
             <div id="main-column" class="flexbox-column column-twothird pageload-fade-in pageload-delay-1">
-                <section id="about-section" class="flexbox-column aifs jcfs">
+                <section id="about-section" class="flexbox-column aifs jcfs content-section">
                     <div class="flexbox-row aic column-full section-heading-container">
                         <h1 class="section-heading">About</h1>
                     </div>
@@ -175,27 +175,27 @@
                         </p>
                     </div>
                 </section>
-                <section id="study-section" class="flexbox-column aifs jcfs">
+                <section id="study-section" class="flexbox-column aifs jcfs content-section">
                     <div class="flexbox-row aic column-full section-heading-container">
                         <h1 class="section-heading">Study</h1>
                     </div>
                     <div id="education-container"></div>
                 </section>
-                <section id="work-section" class="flexbox-column aifs jcfs">
+                <section id="work-section" class="flexbox-column aifs jcfs content-section">
                     <div class="flexbox-row aic column-full section-heading-container">
                         <h1 class="section-heading">Work</h1>
                         <a href="work.html" class="section-link">see all</a>
                     </div>
                     <div id="work-container"></div>
                 </section>
-                <section id="co-curricular-section" class="flexbox-column aifs jcfs">
+                <section id="co-curricular-section" class="flexbox-column aifs jcfs content-section">
                     <div class="flexbox-row aic column-full section-heading-container">
                         <h1 class="section-heading">Co-curricular</h1>
                         <a href="co-curricular.html" class="section-link">see all</a>
                     </div>
                     <div id="co-curricular-container"></div>
                 </section>
-                <section id="projects-section" class="flexbox-column aifs jcfs">
+                <section id="projects-section" class="flexbox-column aifs jcfs content-section">
                     <div class="flexbox-row aic column-full section-heading-container">
                         <h1 class="section-heading">Projects</h1>
                         <a href="projects.html" class="section-link">see all</a>
@@ -204,38 +204,7 @@
                 </section>
 
                 <footer class="flexbox-row mbt-20 ajc">
-                    <span style="color: var(--muted-font);">&copy; <span class="copyright-year"></span>, Hrushikesh Vaidya</span>
-                    <nav class="flexbox-row ajc" style="margin-left: 10px;">
-                        <span class="contact-link flexbox-row aic space-lr">
-                            <a href="https://github.com/hrushikeshrv" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github space-lr" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="#2c3e50" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-                                </svg>
-                            </a>
-                        </span>
-                        <span class="contact-link flexbox-row aic space-lr">
-                            <a href="mailto:hrushikeshrv@gmail.com" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z" />
-                                  <path d="M3 7l9 6l9 -6" />
-                                </svg>
-                            </a>
-                        </span>
-                        <span class="contact-link flexbox-row aic space-lr">
-                            <a href="https://linkedin.com/in/hrushikeshrv" target="_blank">
-                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-linkedin" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#000000" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                  <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                                  <path d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z" />
-                                  <path d="M8 11l0 5" />
-                                  <path d="M8 8l0 .01" />
-                                  <path d="M12 16l0 -5" />
-                                  <path d="M16 16v-3a2 2 0 0 0 -4 0" />
-                                </svg>
-                            </a>
-                        </span>
-                    </nav>
+                    <span style="color: var(--muted-font);">&copy; <span class="copyright-year"></span>, Hrushikesh Vaidya.</span>
                 </footer>
             </div>
         </div>
@@ -284,7 +253,6 @@
                     const workCardRenderer = new CardRenderer(json, workContainer);
                     workCardRenderer.renderCard(json.widewings);
                     workCardRenderer.renderCard(json.mastercard);
-                    workCardRenderer.renderCard(json.coepweb);
                 });
 
             const coCurricularContainer = document.querySelector('#co-curricular-container');
