--- a/index.html
+++ b/index.html
@@ -73,19 +73,55 @@
         <script src="js/mjxgui.min.js"></script>
         <script src="js/matter.js"></script>
         <script src="js/theme-selector.js"></script>
-
-        <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript" src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/42.0.2/ckeditor5.css" />
+        <link rel="stylesheet" href="css/ck-theme.css">
     </head>
     <body>
+        <div class="floating-popup-container hidden" id="contact-form-popup-container">
+            <div class="flexbox-column pad-30 floating-popup" id="contact-form-container">
+                <nav class="flexbox-row aifs">
+                    <button class="flexbox-row ajc close-popup-button" style="margin-left: 0; font-size: 1rem; cursor: pointer;">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrow-left" width="28" height="28" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <line x1="5" y1="12" x2="19" y2="12" />
+                            <line x1="5" y1="12" x2="11" y2="18" />
+                            <line x1="5" y1="12" x2="11" y2="6" />
+                        </svg>
+                        <span class="space-lr">Back</span>
+                    </button>
+                </nav>
+                <h1 class="pageload-fade-in">Send a Message</h1>
+
+                <form action="" id="contact-form" class="flexbox-column pageload-slide-up pageload-delay-1">
+                    <label for="id_name">Your Name:</label>
+                    <input type="text" name="name" id="id_name" required>
+
+                    <label for="id_email">Your Email:</label>
+                    <input type="email" name="email" id="id_email" required>
+
+                    <label for="id_subject">Subject (optional):</label>
+                    <input type="text" name="subject" id="id_subject">
+
+                    <label for="id_message">Message:</label>
+                    <textarea name="message" id="id_message" cols="30" rows="10" required></textarea>
+
+                    <button class="cta-button mt-30 flexbox-row ajc" type="submit" id="submit">
+                        <span class="material-symbols-outlined">send</span>
+                        <strong>Send</strong>
+                    </button>
+                </form>
+            </div>
+        </div>
+
         <div class="flexbox-row center" style="max-width: 2500px;">
             <div id="profile-column" class="flexbox-column column-third jcsb pad-30 hide-scrollbar">
                 <div class="flexbox-column column-full">
                     <header>
                         <nav id="quick-nav" class="flexbox-row ajc pageload-fade-in pageload-delay-1">
-                            <a href="#study-section" class="section-link flexbox-row aic" id="bio-tooltip"><span>Study</span></a>
+                            <a href="#study-section" class="section-link flexbox-row aic mobile-hide" id="bio-tooltip"><span>Study</span></a>
                             <a href="#work-section" class="section-link flexbox-row aic" id="work-tooltip"><span>Work</span></a>
-                            <a href="#projects-section" class="section-link flexbox-row aic" id="projects-tooltip"><span>Projects</span></a>
+                            <a href="#projects-section" class="section-link flexbox-row aic mobile-hide" id="projects-tooltip"><span>Projects</span></a>
+                            <a href="" class="section-link flexbox-row aic mobile-element contact-link"><span>Contact</span></a>
                             <a href="/data/resume-hrushikesh-vaidya.pdf" target="_blank" class="section-link flexbox-row ajc" id="resume-link"><span>Resume</span></a>
                             <button id="change-theme-button" class="flexbox-row aic" aria-label="Change Theme">
                                 <span class="dark-theme-button material-symbols-outlined">dark_mode</span>
@@ -149,10 +185,10 @@
                             <span class="material-symbols-outlined">schedule</span>
                             <span id="my-time"></span>
                         </span>
-                        <span class="flexbox-row aic mt-10 stat-container">
-                            <span class="material-symbols-outlined">mail</span>
-                            <a href="mailto:hrushikeshrv@gmail.com">hrushikeshrv@gmail.com</a>
-                        </span>
+                        <a href="" class="flexbox-row aic mt-10 stat-container contact-link">
+                            <span class="material-symbols-outlined">send</span>
+                            <span>Contact</span>
+                        </a>
                     </div>
                     <div id="about-container" class="mt-30">
                         <p>
@@ -296,5 +332,98 @@
                 myTime.textContent = formatter.format(new Date());
             }, 1000);
         </script>
+        <script type="importmap">
+            {
+                "imports": {
+                    "ckeditor5": "https://cdn.ckeditor.com/ckeditor5/42.0.2/ckeditor5.js",
+                    "ckeditor5/": "https://cdn.ckeditor.com/ckeditor5/42.0.2/"
+                }
+            }
+        </script>
+        <script type="module">
+            import {
+                ClassicEditor,
+                Autoformat,
+                Bold,
+                Font,
+                Italic,
+                Underline,
+                BlockQuote,
+                Essentials,
+                Heading,
+                Indent,
+                IndentBlock,
+                Link,
+                List,
+                Mention,
+                Paragraph,
+                PasteFromOffice,
+                Table,
+                TableColumnResize,
+                TableToolbar,
+                TextTransformation,
+            } from 'ckeditor5';
+
+            let messageEditor;
+
+            ClassicEditor
+                .create( document.querySelector( '#id_message' ), {
+                    plugins: [
+                        Autoformat, BlockQuote, Heading, Indent, IndentBlock, Link, List,
+                        Essentials, Bold, Italic, Underline, Font, Paragraph, Mention, PasteFromOffice,
+                        Table, TableToolbar, TableColumnResize, TextTransformation
+                    ],
+                    toolbar: {
+                        items: [
+                            'undo', 'redo', '|', 'heading', 'bold', 'italic', 'underline', '|', 'link', 'insertTable', 'blockquote',
+                            '|', 'subscript', 'superscript', '|', 'fontSize', 'fontFamily', '|', 'bulletedList', 'numberedList', '|',
+                            'outdent', 'indent',
+                        ]
+                    },
+                    heading: {
+                        options: [
+                            {
+                                model: 'paragraph',
+                                title: 'Paragraph',
+                                class: 'ck-heading_paragraph',
+                            },
+                            {
+                                model: 'heading1',
+                                view: 'h1',
+                                title: 'Heading 1',
+                                class: 'ck-heading_heading1',
+                            },
+                            {
+                                model: 'heading2',
+                                view: 'h2',
+                                title: 'Heading 2',
+                                class: 'ck-heading_heading2',
+                            },
+                            {
+                                model: 'heading3',
+                                view: 'h3',
+                                title: 'Heading 3',
+                                class: 'ck-heading_heading3',
+                            },
+                            {
+                                model: 'heading4',
+                                view: 'h4',
+                                title: 'Heading 4',
+                                class: 'ck-heading_heading4',
+                            },
+                        ],
+                    },
+                    link: {
+                        addTargetToExternalLinks: true,
+                        defaultProtocol: 'https://',
+                    },
+                    table: {
+                        contentToolbar: ['tableColumn', 'tableRow', 'mergeTableCells'],
+                    },
+                } )
+                .then(editor => {messageEditor = editor;})
+                .catch(error => console.error(error));
+        </script>
+        <script src="js/contact.js"></script>
     </body>
 </html>
